Find posting by ID.
