# src/main/java/com/jobportal/jobportal/controller/PostingsController.java
@@ -15,6 +15,7 @@ import com.jobportal.openapi.model.PostingInformationForUpdate;
 import com.jobportal.openapi.model.PostingsInformation;
 import com.jobportal.openapi.model.PostingsInformationComplete;
 import lombok.AllArgsConstructor;
+import lombok.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -24,6 +25,7 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.validation.Valid;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * Controller CRUD Operations for Postings
@@ -44,6 +46,7 @@ public class PostingsController implements PostingsApi {
     private static final String POSTING_NOT_DELETED_MESSAGE = "Posting could not be deleted";
     private static final String POSTINGS_FETCHED_MESSAGE = "Posting list returned successfully";
     private static final String POSTINGS_NOT_FETCHED_MESSAGE = "Posting list not returned";
+
     private final PostingsService postingsService;
 
 
@@ -68,7 +71,6 @@ public class PostingsController implements PostingsApi {
      */
     @Override
     public ResponseEntity<AuthenticationResponse> postingsIdDelete(Long id) {
-
         try {
             AuthenticationResponse response = new AuthenticationResponse();
             postingsService.deletePosting(id);
@@ -83,20 +85,25 @@ public class PostingsController implements PostingsApi {
         }
     }
 
+    @Override
+    public ResponseEntity<PostingsInformationComplete> postingsIdGet(@NonNull Long id) {
+        try {
+            PostingCompleteDto postingDto = postingsService.findPostingById(id);
+            return ResponseEntity.ok(DtoToPostingInformation
+                    .convertPostingsDtoToPostingInformationOpenApi(postingDto));
+        } catch (PostingNotExistingException exception) {
+            return ResponseEntity.ok(new PostingsInformationComplete());
+        }
+    }
+
     /**
      * @param postingInformationForUpdate (optional)
      * @return ResponseEntity<AuthenticationResponse>
      */
     @Override
-    public ResponseEntity<AuthenticationResponse> postingsPatch(@Valid PostingInformationForUpdate postingInformationForUpdate) {
-
-        final PostingSimpleDto postingDto = PostingSimpleDto.builder()
-                .id(postingInformationForUpdate.getId())
-                .deadline(postingInformationForUpdate.getDeadline())
-                .name(postingInformationForUpdate.getName())
-                .description(postingInformationForUpdate.getDescription())
-                .requirements(postingInformationForUpdate.getRequirements())
-                .build();
+    public ResponseEntity<AuthenticationResponse> postingsPatch(
+            @Valid PostingInformationForUpdate postingInformationForUpdate) {
+        final PostingSimpleDto postingDto = buildSimplePostingDto(postingInformationForUpdate);
         try {
             AuthenticationResponse response = new AuthenticationResponse();
             postingsService.editPosting(postingDto);
@@ -141,5 +148,15 @@ public class PostingsController implements PostingsApi {
             response.setStatus(HttpStatus.UNAUTHORIZED);
             return ResponseEntity.ok(response);
         }
+    }
+
+    private PostingSimpleDto buildSimplePostingDto(@Valid PostingInformationForUpdate postingInformationForUpdate) {
+        return PostingSimpleDto.builder()
+                .id(postingInformationForUpdate.getId())
+                .deadline(postingInformationForUpdate.getDeadline())
+                .name(postingInformationForUpdate.getName())
+                .description(postingInformationForUpdate.getDescription())
+                .requirements(postingInformationForUpdate.getRequirements())
+                .build();
     }
 }
